--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,12 +73,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+     - family: Comfortaa
+       fonts:
+         - asset: fonts/Comfortaa-Regular.ttf
+         - asset: fonts/Comfortaa-Regular.ttf
+           style: italic
+         - asset: fonts/Comfortaa-Bold.ttf
+           weight: 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
