--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/Background.png
+    - assets/images/background-hires.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
